--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "buffer": "^5.0.6",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-swiper": "^1.5.5",
+    "react-native-viewpager": "^0.2.13",
     "react-navigation": "latest"
   },
   "devDependencies": {
